// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for content element 1`] = `
<div
  className="menu"
  onClick={[Function]}
>
  <Component
    defaultClassName="add-content"
    key="add-content"
    onClick={[Function]}
  />
  <Component
    defaultClassName="add-gateway"
    key="add-gateway"
    onClick={[Function]}
  />
  <Component
    defaultClassName="change-next"
    dragItem={
      Object {
        "originElement": ContentNode { "id": "b" },
        "type": "link",
      }
    }
    key="change-next"
  />
  <Component
    defaultClassName="remove"
    key="remove"
    onClick={[Function]}
  />
</div>
`;

exports[`renders correctly for converging gateway 1`] = `
<div
  className="menu"
  onClick={[Function]}
>
  <Component
    defaultClassName="add-content"
    key="add-content"
    onClick={[Function]}
  />
  <Component
    defaultClassName="add-gateway"
    key="add-gateway"
    onClick={[Function]}
  />
</div>
`;

exports[`renders correctly for diverging gateway 1`] = `
<div
  className="menu"
  onClick={[Function]}
>
  <Component
    defaultClassName="add-branch"
    key="add-branch"
    onClick={[Function]}
  />
</div>
`;

exports[`renders correctly for diverging gateway branch 1`] = `
<div
  className="menu"
  onClick={[Function]}
>
  <Component
    defaultClassName="add-content"
    key="add-content"
    onClick={[Function]}
  />
  <Component
    defaultClassName="add-gateway"
    key="add-gateway"
    onClick={[Function]}
  />
  <Component
    defaultClassName="change-next"
    dragItem={
      Object {
        "originElement": DivergingGatewayBranch { "followingElement": ConvergingGatewayBranch { "gateway": ConvergingGatewayNode { "followingElement": ContentNode { "id": "c" } } } },
        "type": "link",
      }
    }
    key="change-next"
  />
  <Component
    defaultClassName="remove"
    key="remove"
    onClick={[Function]}
  />
</div>
`;

exports[`renders correctly for start element 1`] = `
<div
  className="menu"
  onClick={[Function]}
>
  <Component
    defaultClassName="add-content"
    key="add-content"
    onClick={[Function]}
  />
  <Component
    defaultClassName="add-gateway"
    key="add-gateway"
    onClick={[Function]}
  />
</div>
`;
